# structured-output

./: Cargo.toml  README.md
src/: lib.rs
