[package]
name = "structured-output"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A library for structured CLI output that can be displayed as either printed lines or JSON."
repository = "https://github.com/jsoverson/structured-output"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
